--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Vishal
+---
+title: "Vishal"
 date: 2021-06-27
 author: GitHub User
 email: your-email@domain.com
@@ -13,3 +14,4 @@ github_username:  your-github-handle # DO NOT include the @ character, or else t
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
+---
